force-app/main/default/objects/ApexSharing__c/ApexSharing__c.object-meta.xml
<CustomObject>
    <label>ApexSharing</label>
    <nameField>
        <displayFormat>AS-{0000}</displayFormat>
        <label>ApexSharing Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ApexSharings</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>