force-app/main/default/objects/ApexSharing__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Client</label>
    <referenceTo>SymphonyLF__Client__c</referenceTo>
    <relationshipLabel>ApexSharings</relationshipLabel>
    <relationshipName>ApexSharings</relationshipName>
    <type>Lookup</type>
</CustomField>