force-app/main/default/objects/ApexSharing__c/fields/FutureStatus__c.field-meta.xml
<CustomField>
    <fullName>FutureStatus__c</fullName>
    <label>Future Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pending</fullName>
                <default>true</default>
                <label>Pending</label>
            </value>
            <value>
                <fullName>Shared</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
            <value>
                <fullName>Transaction Finalizer</fullName>
                <label>Transaction Finalizer (ie. Error happend in code. Please contact System Admin)</label>
            </value>
            <value>
                <fullName>Access Level Changed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>