force-app/main/default/objects/ApexSharing__c/fields/FutureUser__c.field-meta.xml
<CustomField>
    <fullName>FutureUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Future User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApexSharings2</relationshipName>
    <type>Lookup</type>
</CustomField>