force-app/main/default/objects/ApexSharing__c/fields/GroupIdToShareWith__c.field-meta.xml
<CustomField>
    <fullName>GroupIdToShareWith__c</fullName>
    <label>Group Id To Share With</label>
    <length>18</length>
    <type>Text</type>
</CustomField>