force-app/main/default/objects/ApexSharing__c/fields/GroupToShareWith__c.field-meta.xml
<CustomField>
    <fullName>GroupToShareWith__c</fullName>
    <label>Group To Share With</label>
    <length>255</length>
    <type>Text</type>
</CustomField>