force-app/main/default/objects/ApexSharing__c/fields/InitiationPoint__c.field-meta.xml
<CustomField>
    <fullName>InitiationPoint__c</fullName>
    <label>Initiation Point</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Person</fullName>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Group</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>