force-app/main/default/objects/ApexSharing__c/fields/PersonKey__c.field-meta.xml
<CustomField>
    <fullName>PersonKey__c</fullName>
    <label>Person Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>