force-app/main/default/objects/ApexSharing__c/fields/PersonToShareWith__c.field-meta.xml
<CustomField>
    <fullName>PersonToShareWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Person To Share With</label>
    <referenceTo>SymphonyLF__Person__c</referenceTo>
    <relationshipLabel>ApexSharings</relationshipLabel>
    <relationshipName>ApexSharings</relationshipName>
    <type>Lookup</type>
</CustomField>