force-app/main/default/objects/ApexSharing__c/fields/ReasonForNotSharing__c.field-meta.xml
<CustomField>
    <fullName>ReasonForNotSharing__c</fullName>
    <label>Reason For Not Sharing</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>User Record Absent</fullName>
            </value>
            <value>
                <fullName>User Is Inactive</fullName>
            </value>
            <value>
                <fullName>Key Mismatch Between Person Record And User Record</fullName>
            </value>
            <value>
                <fullName>Key Missing On Person/ User</fullName>
            </value>
            <value>
                <fullName>Group Missing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>