force-app/main/default/objects/ApexSharing__c/fields/RowCause__c.field-meta.xml
<CustomField>
    <fullName>RowCause__c</fullName>
    <label>Row Cause</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>MEM_Annuity_Specialist__c</fullName>
            </value>
            <value>
                <fullName>MEM_Case_Manager__c</fullName>
            </value>
            <value>
                <fullName>MEM_Docketing_Specialist__c</fullName>
            </value>
            <value>
                <fullName>MEM_IDS_Specialist__c</fullName>
            </value>
            <value>
                <fullName>MEM_Lead_Attorney__c</fullName>
            </value>
            <value>
                <fullName>MEM_Legal_Assistant__c</fullName>
            </value>
            <value>
                <fullName>MEM_Paralegal__c</fullName>
            </value>
            <value>
                <fullName>MEM_Working_Attorney__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>