force-app/main/default/objects/ApexSharing__c/fields/ShareObject__c.field-meta.xml
<CustomField>
    <fullName>ShareObject__c</fullName>
    <label>Share Object</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SymphonyLF__Patent__Share</fullName>
            </value>
            <value>
                <fullName>SymphonyLF__Copyright__Share</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>