force-app/main/default/objects/ApexSharing__c/fields/TransactionFinalizerErrorMessage__c.field-meta.xml
<CustomField>
    <fullName>TransactionFinalizerErrorMessage__c</fullName>
    <label>Transaction Finalizer Error Message</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>