force-app/main/default/objects/ApexSharing__c/fields/UserKey__c.field-meta.xml
<CustomField>
    <fullName>UserKey__c</fullName>
    <label>User Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>