force-app/main/default/objects/ApexSharing__c/fields/UserKeyUser__c.field-meta.xml
<CustomField>
    <fullName>UserKeyUser__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>UserKey User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApexSharings1</relationshipName>
    <type>Lookup</type>
</CustomField>