force-app/main/default/objects/ApexSharing__c/fields/UserToShareWith__c.field-meta.xml
<CustomField>
    <fullName>UserToShareWith__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User To Share With</label>
    <referenceTo>User</referenceTo>
    <relationshipName>ApexSharings</relationshipName>
    <type>Lookup</type>
</CustomField>