force-app/main/default/objects/ApexSharing__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Client__c</columns>
    <columns>ShareObject__c</columns>
    <columns>RowCause__c</columns>
    <columns>RecordId__c</columns>
    <columns>ReasonForNotSharing__c</columns>
    <columns>FutureStatus__c</columns>
    <columns>PersonToShareWith__c</columns>
    <columns>UserToShareWith__c</columns>
    <columns>Module__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>